fix: word-wrap individual paragraphs
Parent word-wrap isn't able to wrap the <p> tags

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -546,6 +546,9 @@
       @if $theme == 'kitsu-dark' {
         color: $white;
       }
+      p {
+        @include word-break();
+      }
       p:last-child {
         margin-bottom: 0;
       }
